@@ -4,6 +4,10 @@
 	(-[lineAndColumnIndexesFromIndex:returnsLineIndex:columnIndex:])
 	Treat '\r' as a regualar character when counting lines as '\n'
 	is the actual line break.
+
+	* GSWeb.framework/GSWDeclarationParser.m
+	(parseQuotedString): Handle escaped quotes.
+	(parseDictionaryWithValuesAsAssociations:): Handle key path as key.
 	
 2005-09-30  David Wetzel <dave@turbocat.de>
 	
